--- a/.gitignore
+++ b/.gitignore
@@ -131,7 +131,7 @@ dist
 
 # other files
 .eslintrc.json
-.package-lock.json
-.firebase
+util/AxeptioInjector.js
+.firebase/hosting.b3V0.cache
 firebase.json
-package-lock
+
